--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build:server && npm run build:client",
     "build:server": "rm -rf dist && mkdir dist && cp ./framework/mock-server/mockServiceWorker.js dist/ && esbuild ./framework/server/index.js --bundle --minify --platform=node --outfile=dist/server.js",
     "build:client": "esbuild ./framework/client/index.js --bundle --minify --platform=browser --outfile=dist/client.js",
-    "start": "npm run build && node dist/server.js",
+    "start": "tsc && npm run build && node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,7 +16,8 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "esbuild": "^0.21.3"
+    "esbuild": "^0.21.3",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "fastify": "^4.27.0",
